--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogo do Labirinto</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Jogo do Labirinto</h1>
@@ -31,6 +31,6 @@
         <button id="restart">Reiniciar</button>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../src/script.js"></script>
 </body>
 </html>
