--- a/labirinto/index.html
+++ b/labirinto/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Labirinto 25x25</title>
+    <title>Labirinto</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="game-container">
-        <h1>Labirinto 25x25</h1>
+        <h1>Labirinto</h1>
         
         <div class="controls">
             <button id="solveCorrect">✅ Resolver Acertando</button>
