--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Labirinto</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/src/styles/style.css">
 </head>
 <body>
     <div class="game-container">
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    <script src="maze.js"></script>
-    <script src="game.js"></script>
+    <script src="/src/maze.js"></script>
+    <script src="/src/game.js"></script>
 </body>
 </html>
