--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     <button id="applySize">Aplicar</button>
                 </div>
                 <div class="action-buttons">
-                    <button id="solveCorrect">✅ Resolver Acertando</button>
-                    <button id="solveWrong">🔄 Resolver Errando</button>
+                    <button id="solveCorrect">✅ Bot Esperto</button>
+                    <button id="solveWrong">🔄 Bot BackTracking</button>
                     <button id="reset">🔄 Novo Labirinto</button>
                 </div>
             </div>
